gdb/amdgpu: Test watchpoints at the end of a shader code
Add a new testcase that tests that a write watchpoint is reported to the
debugger if the statement doing the memory write is the last one of the
shader code.  For some architectures, this might not pass unless precise
memory is enabled (when available), so this patch also adds a note in
the documentation regarding this limitation.

Change-Id: Ifec4f8ef9af61ba992c36034d0fa0f35fc84d35a
(cherry picked from commit 9cb2997d83a1cbb6e9a63c76d523b2e4f85d19dc)

--- a/gdb/doc/gdb.texinfo
+++ b/gdb/doc/gdb.texinfo
@@ -30082,6 +30082,13 @@ For @acronym{AMD GPU} architectures @samp{gfx1100}, @samp{gfx1101} and
 @samp{gfx1102}, the @acronym{AMD ROCm} runtime cannot create a
 @acronym{AMD GPU} core dump (@pxref{AMD GPU core dumps}).
 
+@item
+For @acronym{AMD GPU} architectures @samp{gfx10*}, @samp{gfx11*} and
+@samp{gx12*}, a watchpoint (@pxref{Set Watchpoints, ,Setting
+Watchpoints}) might not be reported to the debugger if the memory is
+modified by the last instruction of the shader when precise memory
+is not enabled (@pxref{AMDGPU Memory Violation Reporting}).
+
 @end enumerate
 
 @node Controlling GDB
