gdb/doc/amdgpu: Document restriction on placing breakpoints in clauses
For AMDGPU architectures gfx10*, gfx11* and gfx12*, a code can use
"clauses", which is a construct grouping together instructions of the
same kind in a block.  There are restrictions regarding placing a
breakpoint within such a block, as the instruction used to implement
software breakpoints would not be of the instruction type required
throughout the clause.  Placing a breakpoint inside a clause might lead
to undesired behavior.

This patch adds a note in the AMDGPU restrictions section to document
this limitation.

Change-Id: Ifc3d1e0cfcecb19d12ddabe62cccb4349309ddad

--- a/gdb/doc/gdb.texinfo
+++ b/gdb/doc/gdb.texinfo
@@ -30090,6 +30090,13 @@ Watchpoints}) might not be reported to the debugger if the memory is
 modified by the last instruction of the shader when precise memory
 is not enabled (@pxref{AMDGPU Memory Violation Reporting}).
 
+@item
+For architectures @samp{gfx10*}, @samp{gfx11*} and @samp{gfx12*}, a
+breakpoint should not be placed in a clause (see the @samp{s_clause}
+instruction in the relevant instruction set manual).  It is possible to
+step through a clause.  Waves can receive asynchronous exceptions
+while in a clause.
+
 @end enumerate
 
 @node Controlling GDB
