gdb/solib-rocm: Locate files using sysroot or solib-search-path
When opening a core dump, the shared library which contain GPU code
objects might not be available at the exact same path they were on the
system where the core dump was created.

To handle such situation, this patch adds support for looking for
"file://" code objects in sysroot using or solib-search-path using
solib_find.  If solib_find can't find the required file, we fall back to
opening the file on the "target".  Note that for now, this is not
necessary as we do not support remote debugging yet, but once remote
debugging is supported, this will allow opening the file on the remote
system.

Change-Id: Id7149bf11f927a99b4f583147fe83f60d4859a2d
Bug: SWDEV-487041

--- a/gdb/doc/gdb.texinfo
+++ b/gdb/doc/gdb.texinfo
@@ -22347,6 +22347,7 @@ may try to load the host's libraries.  @value{GDBN} has two variables
 to specify the search directories for target libraries.
 
 @table @code
+@anchor{set sysroot}
 @cindex prefix for executable and shared library file names
 @cindex system root, alternate
 @kindex set solib-absolute-prefix
@@ -22448,6 +22449,7 @@ location.
 @item show sysroot
 Display the current executable and shared library prefix.
 
+@anchor{set solib-search-path}
 @kindex set solib-search-path
 @item set solib-search-path @var{path}
 If this variable is set, @var{path} is a colon-separated list of
@@ -29526,6 +29528,13 @@ Thread 3 (AMDGPU Wave 1:1:1:1 (0,0,0)/0) stopped because of SIGSEGV.
 [Current thread is 3, lane 0 (AMDGPU Lane 1:1:1:1/0 (0,0,0)[0,0,0])]
 (@value{GDBP})
 @end smallexample
+
+When opening a core dump, @value{GDBN} tries to load GPU code objects at
+the same path they were on the system where the core dump got produced.
+If the code objects are not at the same location, @value{GDBN} can look
+in the @code{sysroot} (@pxref{set sysroot,,set sysroot}), or use the
+@code{shared-library-path} (@pxref{set solib-search-path,,set
+solib-search-path}).
 
 @subsubsection @acronym{AMD GPU} Restrictions
 
